# Butler-os

./: .env.example  .gitignore  Brewfile  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
aibutler-core/: voice.py
aibutler-core/runtime/: __init__.py  __main__.py  agentic.py  context_repository.py  core_agent.py  crm.py  engine.py  mempalace_adapter.py  models.py  plugins.py  rag_memory.py  security.py  store.py  swarm_worker.py  tool_registry.py
aibutler-core/tools/: __init__.py  computer_use.py  context_tools.py  file_ops.py  life_data.py  openclaw_tools.py  relationship_tools.py  rtk_tools.py  secrets.py  swarm_tools.py
bridge/: pyrightconfig.json  server.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.svelte
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ANDROID_PHONE_TEST_2026-04-07.md  ARCHITECTURE.md  BOUNDARY_SPEC.md  BUTLER_OS_ROADMAP_2026-04-08.md  BUTLER_UI_DOCTRINE_2026-04-08.md  CONTEXT_ENGINE_AND_RAVEN_ARCHITECTURE_2026-04-07.md  GITHUB_PROFILE_PACK.md  PRODUCT_PROFILE.md  PUBLIC_GITHUB_CUTOVER.md  REAL_PROTOTYPE_EXECUTION_TRACK_2026-04-07.md
integrations/openclaw/rtk-rewrite/: index.ts  openclaw.plugin.json
landing/: index.html
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/components/: ContextMapCard.tsx  ToolCallBadge.tsx  VoiceInterface.tsx
mobile/lib/: androidPhoneMetadata.ts  bridge.ts  modules.ts  recipes.ts  skins.ts  tools.ts
scripts/: build-sidecar.sh  dev.sh  setup.sh
(+7 files in other folders)
