[package]
name = "aibutler-desktop"
version = "0.1.0"
description = "aiButler — phone-native executive assistant"
authors = ["Tyler Steeves"]
license = "MIT"
repository = "https://github.com/aibutler/aibutler.me"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aibutler_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
